# rsudp-rust

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  GEMINI.md  Makefile  README.md  docker-compose.test.yml  docker-compose.yml  test_capture.toml
.specify/memory/: constitution.md
capture-service/: package-lock.json  package.json  server.js
logs/: comparison_report.csv
rsudp-rust/: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  compare_peaks.py  dummy.csv  dump_test.toml  inspect_mseed.py  rsudp_settings.toml  verify_config.toml  verify_intensity.py  verify_output.toml
rsudp-rust/src/: filter.rs  forward.rs  lib.rs  main.rs  pipeline.rs  receiver.rs  rsam.rs  settings.rs  sound.rs  trigger.rs  trigger_new.rs
rsudp-rust/src/hue/: client.rs  config.rs  discovery.rs  mod.rs
rsudp-rust/src/intensity/: calc.rs  filter.rs  mod.rs
rsudp-rust/src/parser/: header.rs  mod.rs  mseed.rs  stationxml.rs  steim.rs
rsudp-rust/src/pubsub/: dedup.rs  mod.rs  proto.rs  publisher.rs  subscriber.rs
rsudp-rust/src/web/: alerts.rs  history.rs  mod.rs  plot.rs  routes.rs  spectrogram.rs  stream.rs  test_utils.rs
rsudp-rust/src/web/sns/: aws_sns.rs  discord.rs  gchat.rs  line.rs  mod.rs  s3.rs
rsudp-rust/systemd/: rsudp-capture.service  rsudp-webui.service  rsudp.service
rsudp-rust/tests/: e2e_alert.rs  integration_alert.rs  integration_intensity.rs  integration_receiver.rs  integration_streamer.rs  pubsub_e2e.rs  pubsub_integration.rs  reproduce_filter_bug.rs  test_fdsnws_mseed.rs  test_forward.rs  test_normal_mseed.rs  test_plot_comparison.rs  test_rsam.rs  test_settings.rs  test_stalta_mseed.rs
rsudp-rust/tests/scripts/: extract_mseed_data.py  generate_stalta_reference.py
rsudp-venv/: pyvenv.cfg
scripts/: analyze_mseed.py  apply_patches.py  check_filter_coeffs.py  check_obspy_values.py  compare_algo.py  compare_logs.py  generate_truth.py  rsudp_settings.json  rsudp_settings.toml  run_comparison.sh  run_python_ref.sh  run_rust_target.sh  setup_python_env.sh
specs/001-init-rust-project/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-udp-receiver/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-sta-lta-calc/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-data-ingestion-pipeline/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-pure-rust-mseed/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-sta-lta-alert/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-webui-plot/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-seismic-intensity-calc/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-udp-mseed-streamer/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/010-comprehensive-alerting/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/011-rsudp-plot-compatibility/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/012-intensity-on-plot/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/013-alert-message-intensity/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/014-rsudp-alert-timing/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/015-fix-plot-timestamp/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/016-add-rsudp-config/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/017-fix-streamer-compatibility/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/018-fix-packet-granularity/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/019-restore-sta-lta-alert/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/020-add-e2e-alert-test/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/021-cleanup-project-files/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/022-cleanup-logs/: spec.md  tasks.md
webui/: Dockerfile  package-lock.json  package.json
(+195 files in other folders)
