[package]
name = "rsudp-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = { version = "0.14", features = ["toml", "yaml"] }
toml = "0.8"
serde_yaml = "0.9"
dirs = "5.0"
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
byteorder = "1.5"
thiserror = "1.0"
futures-util = "0.3"
rustfft = "6.2"
num-complex = "0.4"
mseed = "0.7"
quick-xml = { version = "0.37", features = ["serialize"] }
plotters = { version = "0.3", default-features = false, features = ["bitmap_backend", "bitmap_encoder", "line_series", "area_series", "ab_glyph"] }
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder", "hostname"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
colorous = "1.0"

[dev-dependencies]
csv = "1.3"
tempfile = "3.8"
regex = "1.10"

[[bin]]
name = "streamer"
path = "src/bin/streamer.rs"