[package]
name = "rsudp-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = { version = "0.14", features = ["toml", "yaml"] }
toml = "0.8"
serde_yaml = "0.9"
dirs = "5.0"
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
byteorder = "1.5"
thiserror = "1.0"
futures-util = "0.3"
rustfft = "6.2"
num-complex = "0.4"
mseed = "0.7"
quick-xml = { version = "0.37", features = ["serialize"] }
plotters = { version = "0.3", default-features = false, features = ["bitmap_backend", "bitmap_encoder", "line_series", "area_series", "ab_glyph"] }
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder", "hostname"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
colorous = "1.0"
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
mdns-sd = "0.13"
aws-config = { version = "1.1", default-features = false, features = ["rustls"] }
rodio = { version = "0.17", default-features = false, features = ["symphonia-mp3", "symphonia-wav"] }
aws-sdk-s3 = { version = "1.1", default-features = false, features = ["rustls", "rt-tokio"] }
aws-sdk-sns = { version = "1.1", default-features = false, features = ["rustls", "rt-tokio"] }
google-cloud-pubsub = "0.30"
google-cloud-googleapis = "0.16"
google-cloud-gax = "0.19"
prost = "0.14"
prost-types = "0.14"
tokio-util = "0.7"

[build-dependencies]
prost-build = "0.14"

[dev-dependencies]
csv = "1.3"
tempfile = "3.8"
regex = "1.10"

[[bin]]
name = "streamer"
path = "src/bin/streamer.rs"